<resources>
    <string name="library_app_name">AwesomeCalendar</string>

    <string name="cdrp_mon">Seg</string>
    <string name="cdrp_tue">Ter</string>
    <string name="cdrp_wed">Qua</string>
    <string name="cdrp_thu">Qui</string>
    <string name="cdrp_fri">Sex</string>
    <string name="cdrp_sat">Sáb</string>
    <string name="cdrp_sun">Dom</string>

    <string-array name="week_sun_sat">
        <item>@string/cdrp_sun</item>
        <item>@string/cdrp_mon</item>
        <item>@string/cdrp_tue</item>
        <item>@string/cdrp_wed</item>
        <item>@string/cdrp_thu</item>
        <item>@string/cdrp_fri</item>
        <item>@string/cdrp_sat</item>
    </string-array>

    <string name="cancel">Cancelar</string>
    <string name="done">Confirmar</string>
    <string name="title_time_picker">Selecione um horário</string>
    <string name="select_time">Selecione um horário</string>
    <string name="subtitle">Escolha a data de ida</string>
    <string name="clear_selection">Limpar</string>
    <string name="confirm">Confirmar</string>
    <string name="subtitle_return">Escolha a data de volta</string>

</resources>
