<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/rlTimePickerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp">

        <com.archit.calendardaterangepicker.customviews.CustomTextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title_time_picker"
            android:textColor="@color/default_date_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.archit.calendardaterangepicker.customviews.CustomTextView
            android:id="@+id/tvHeaderCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/default_date_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.archit.calendardaterangepicker.customviews.CustomTextView
            android:id="@+id/tvHeaderDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/done"
            android:textColor="@color/default_date_color"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlTimePickerContainer"
        android:gravity="center">

        <!--<NumberPicker-->
            <!--android:id="@+id/pickerHours"-->
            <!--android:layout_width="60dp"-->
            <!--android:layout_height="match_parent">-->

        <!--</NumberPicker>-->

        <!---->
        <!---->
        <!--<NumberPicker-->
            <!--android:id="@+id/pickerMins"-->
            <!--android:layout_width="60dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_toRightOf="@id/pickerHours">-->

        <!--</NumberPicker>-->

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:timePickerMode="spinner"
            android:numbersTextColor="@color/calendar_text"
            android:layout_height="match_parent">

        </TimePicker>

        <!--<android.support.v7.widget.RecyclerView
            android:id="@+id/rvHours"
            android:layout_width="80dp"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/tvTimeSeparator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/rvHours"
            android:text=":"
            android:textSize="20sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvMinutes"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tvTimeSeparator">

        </android.support.v7.widget.RecyclerView>-->

        <!-- <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#000" />

         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#000" />-->

    </RelativeLayout>

</RelativeLayout>